CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )

SET( Boost_USE_STATIC_LIBS        ON )
SET( Boost_USE_MULTITHREADED      ON )

PROJECT( pymp CXX )

IF( CMAKE_COMPILER_IS_GNUCXX )
   set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
ENDIF()

FIND_PACKAGE( Boost REQUIRED COMPONENTS python )
FIND_PACKAGE( PythonLibs 2.7 )

ADD_DEFINITIONS( -DBOOST_PYTHON_STATIC_LIB )

LINK_DIRECTORIES( ${Boost_LIBRARY_DIRS} )

INCLUDE_DIRECTORIES( ${Boost_INCLUDE_DIRS} ${PROJECT_SOURCE_DIR} ${PROJECT_SOURCE_DIR}/cmp ${PYTHON_INCLUDE_DIR} )

SET_SOURCE_FILES_PROPERTIES( cmp/cmp.c PROPERTIES LANGUAGE CXX )

ADD_LIBRARY( pymp SHARED cmp/cmp.h stdbool.h cmp/cmp.c pymp.cpp )

TARGET_LINK_LIBRARIES( pymp ${Boost_LIBRARIES} ${PYTHON_LIBRARY} )

SET_TARGET_PROPERTIES( pymp PROPERTIES PREFIX "" )
SET_TARGET_PROPERTIES( pymp PROPERTIES SUFFIX ".pyd" )
